apply plugin: 'java'
apply plugin: 'application'

group = 'mongodb.tedc'
version = '1.0'


sourceCompatibility = 1.8
targetCompatibility = 1.8


repositories {
        mavenCentral()
}
dependencies {
    compile group: 'org.mongodb', name: 'mongo-java-driver', version:'2.12.4'
    compile group: 'com.sparkjava', name: 'spark-core', version:'2.0.0'
    compile group: 'org.freemarker', name: 'freemarker', version:'2.3.21'
    compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.1'
    compile group: 'commons-codec', name: 'commons-codec', version:'1.7'
}
